--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-base_url = "https://jumphave.github.io"
+base_url = "https://archjh.github.io"
 
 title = "Dr. Henry Jekyll"
 description = "A timeless blog theme"
