--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 base_url = "https://archjh.github.io"
 
-title = "Dr. Henry Jekyll"
+title = "archjh的个人博客"
 description = "A timeless blog theme"
 compile_sass = false
 highlight_code = true
